--- a/HTML/SITE/atividade01(tabela).html
+++ b/HTML/SITE/atividade01(tabela).html
@@ -9,37 +9,75 @@
 <body>
     <main>
         <div align="center">
-            <table border="1px black" width="50%" cellpadding="20">
-                <caption>Descrição ta tabela</caption> 
-                <tr>
-                    <th>Rede Social</th>
-                    <th>conta</th>
-                </tr>
-                <tr>
-                    <td>
-                        <p>GitHub:</p>
-                    </td>
-                    <td>
-                        <p>lapaCaio</p>
-                    </td>
-                </tr>
+            <table border="1px black" width="50%" cellpadding="10" >
+                <caption>Nosso Cardápio</caption>
+                <thead>
+                    <tr font="Arial">
+                        <th>Categoria</th>
+                        <th>Item</th>
+                        <th>Preço unitário</th>
+                        <th>Valor total por categoria</th>
+                    </tr>
+                </thead>
+               <tbody>
+                    <tr>
+                        <th rowspan="4">PORÇÕES</th>
+                        <td>Batata Frita</td>
+                        <td align="right">R$ 7,50</td>
+                        <th rowspan="4">R$ 34,70</th>
+                    </tr>
+                    <tr>
+                        <td>Torresmo</td>
+                        <td align="right">R$ 5,70</td>
+                    </tr>
+                    <tr>
+                        <td>Azeitona</td>
+                        <td align="right">R$ 4,50</td>
+                    </tr>
+                    <tr>
+                        <td>Camarão</td>
+                        <td align="right">R$ 17,00</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="3">BEBIDAS</th>
+                        <td>Cerveja</td>
+                        <td align="right">R$ 3,50</td>
+                        <th rowspan="3">R$ 14,50</th>
+                    </tr>
+                    <tr>
+                        <td>Refrigerante</td>
+                        <td align="right">R$ 1,50</td>
+                    </tr>
+                    <tr>
+                        <td>Caipirinha</td>
+                        <td align="right">R$ 9,50</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="3">LANCHES</th>
+                        <td>Misto-quente</td>
+                        <td align="right">R$ 2,00</td>
+                        <th rowspan="3" cellpadding="5">R$ 6,80</th>
+                    </tr>
+                    <tr>
+                        <td>Hamburguer</td>
+                        <td align="right">R$ 2,30</td>
+                    </tr>
+                    <tr>
+                        <td>Sanduíche Natural</td>
+                        <td align="right">R$ 2,50</td>
+                    </tr>
+                     
+               </tbody> 
             </table>
-            <!-- 
-                VER QUAL É A LINHA QUE TEM A MAIOR QUANTIdADE DE CÉLULAR 
-                rowspan = junta linhas
-                colspan = junta colunas (mais fácil de usar)
-            -->
-            <table border="1px black" width="50%" cellpadding="20">
-                <tr>
-                    <td colspan="2">Colunas 1 e 2</td>
-                    <td>Coluna 3</td>
-                </tr>
-                <tr>
-                    <td>td 1</td>
-                    <td>td 2</td>
-                    <td>td 3</td>
-                </tr>    
-            </table>
+
+
+            <thead>
+            </thead>
+            <tbody>
+            </tbody>
+            <tfoot>
+            </tfoot>
+
         </div>
     </main>
 </body>
