--- a/HTML/SITE/exercicio01.html
+++ b/HTML/SITE/exercicio01.html
@@ -10,62 +10,62 @@
     <main>
         <div align="center">
             <table border="2px black" width="40%" cellpadding="10" cellspacing="0" >
-                <caption><h1><font face="Arial, Helvetica, sans-serif">Nosso Cardápio</font></h1></caption>
+                <caption><h1><font face="Arial">Nosso Cardápio</font></h1></caption>
                 <thead>
                     <tr bgcolor="lightgray">
-                        <th width="25%"><font face="Arial, Helvetica, sans-serif" size="+1">Categoria</font></th>
-                        <th width="25%"><font face="Arial, Helvetica, sans-serif" size="+1">Item</font></th>
-                        <th width="25%"><font face="Arial, Helvetica, sans-serif" size="+1">Preço unitário</font></th>
-                        <th width="25%"><font face="Arial, Helvetica, sans-serif" size="+1">Valor total por categoria</font></th>
+                        <th width="25%"><font face="Arial" size="+1">Categoria</font></th>
+                        <th width="25%"><font face="Arial" size="+1">Item</font></th>
+                        <th width="25%"><font face="Arial" size="+1">Preço unitário</font></th>
+                        <th width="25%"><font face="Arial" size="+1">Valor total por categoria</font></th>
                     </tr>
                 </thead>
                <tbody>
                     <tr>
-                        <th rowspan="4"><font face="Arial, Helvetica, sans-serif" size="+1">PORÇÕES</font></th>
-                        <td><font face="Arial, Helvetica, sans-serif">Batata Frita</font></td>
-                        <td align="right"><font face="Arial, Helvetica, sans-serif">R$ 7,50</font></td>
-                        <th rowspan="4"><font face="Arial, Helvetica, sans-serif" size="+1">R$ 34,70</font></th>
+                        <th rowspan="4"><font face="Arial" size="+1">PORÇÕES</font></th>
+                        <td><font face="Arial">Batata Frita</font></td>
+                        <td align="right"><font face="Arial">R$ 7,50</font></td>
+                        <th rowspan="4"><font face="Arial" size="+1">R$ 34,70</font></th>
                     </tr>
                     <tr>
-                        <td><font face="Arial, Helvetica, sans-serif">Torresmo</font></td>
-                        <td align="right"><font face="Arial, Helvetica, sans-serif">R$ 5,70</font></td>
+                        <td><font face="Arial">Torresmo</font></td>
+                        <td align="right"><font face="Arial">R$ 5,70</font></td>
                     </tr>
                     <tr>
-                        <td><font face="Arial, Helvetica, sans-serif">Azeitona</font></td>
-                        <td align="right"><font face="Arial, Helvetica, sans-serif">R$ 4,50</font></td>
+                        <td><font face="Arial">Azeitona</font></td>
+                        <td align="right"><font face="Arial">R$ 4,50</font></td>
                     </tr>
                     <tr>
-                        <td><font face="Arial, Helvetica, sans-serif">Camarão</font></td>
-                        <td align="right"><font face="Arial, Helvetica, sans-serif">R$ 17,00</font></td>
+                        <td><font face="Arial">Camarão</font></td>
+                        <td align="right"><font face="Arial">R$ 17,00</font></td>
                     </tr>
                     <tr>
-                        <th rowspan="3"><font face="Arial, Helvetica, sans-serif" size="+1">BEBIDAS</font></th>
-                        <td><font face="Arial, Helvetica, sans-serif">Cerveja</font></td>
+                        <th rowspan="3"><font face="Arial" size="+1">BEBIDAS</font></th>
+                        <td><font face="Arial">Cerveja</font></td>
 
-                        <td align="right"><font face="Arial, Helvetica, sans-serif">R$ 3,50</font></td>
-                        <th rowspan="3"><font face="Arial, Helvetica, sans-serif" size="+1">R$ 14,50</font></th>
+                        <td align="right"><font face="Arial">R$ 3,50</font></td>
+                        <th rowspan="3"><font face="Arial" size="+1">R$ 14,50</font></th>
                     </tr>
                     <tr>
-                        <td><font face="Arial, Helvetica, sans-serif">Refrigerante</font></td>
-                        <td align="right"><font face="Arial, Helvetica, sans-serif">R$ 1,50</font></td>
+                        <td><font face="Arial">Refrigerante</font></td>
+                        <td align="right"><font face="Arial">R$ 1,50</font></td>
                     </tr>
                     <tr>
-                        <td><font face="Arial, Helvetica, sans-serif">Caipirinha</font></td>
-                        <td align="right"><font face="Arial, Helvetica, sans-serif">R$ 9,50</font></td>
+                        <td><font face="Arial">Caipirinha</font></td>
+                        <td align="right"><font face="Arial">R$ 9,50</font></td>
                     </tr>
                     <tr>
-                        <th rowspan="3"><font face="Arial, Helvetica, sans-serif" size="+1">LANCHES</font></th>
-                        <td><font face="Arial, Helvetica, sans-serif">Misto-quente</font></td>
-                        <td align="right"><font face="Arial, Helvetica, sans-serif">R$ 2,00</font></td>
-                        <th rowspan="3" cellpadding="5"><font face="Arial, Helvetica, sans-serif" size="+1">R$ 6,80</font></th>
+                        <th rowspan="3"><font face="Arial" size="+1">LANCHES</font></th>
+                        <td><font face="Arial">Misto-quente</font></td>
+                        <td align="right"><font face="Arial">R$ 2,00</font></td>
+                        <th rowspan="3" cellpadding="5"><font face="Arial" size="+1">R$ 6,80</font></th>
                     </tr>
                     <tr>
-                        <td><font face="Arial, Helvetica, sans-serif">Hamburguer</font></td>
-                        <td align="right"><font face="Arial, Helvetica, sans-serif">R$ 2,30</font></td>
+                        <td><font face="Arial">Hamburguer</font></td>
+                        <td align="right"><font face="Arial">R$ 2,30</font></td>
                     </tr>
                     <tr>
-                        <td><font face="Arial, Helvetica, sans-serif">Sanduíche Natural</font></td>
-                        <td align="right"><font face="Arial, Helvetica, sans-serif">R$ 2,50</font></td>
+                        <td><font face="Arial">Sanduíche Natural</font></td>
+                        <td align="right"><font face="Arial">R$ 2,50</font></td>
                     </tr>
                      
                </tbody> 
