ADD - exercicio02.html

--- a/HTML/SITE/exercicio02.html
+++ b/HTML/SITE/exercicio02.html
@@ -13,13 +13,13 @@
                 <thead>
                     <tr>
                         <td><h1>LOGO</h1></td>
-                        <td><h3>BANNER OU INFORMAÇÕES SITE</h3></td>
+                        <td bgcolor="orange"><h3>BANNER OU INFORMAÇÕES SITE</h3></td>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>
-                            <table>
+                        <td bgcolor="darkblue">
+                            <table border="1px">
                                 <thead>
                                     <tr>
                                         <td>
@@ -102,18 +102,41 @@
                                 </tbody>
                             </table>
                         </td>
-                        <td>
-                            <tr>
-                                <table>
+                        <td cellpadding="0">
+                            <div align="center">
+                                <table border="1px" >
                                     <tr>
-                                        
+                                        <td>
+                                            <div align="center">
+                                                <table border="1px">
+                                                    <tbody>
+                                                        <tr >
+                                                            <td>
+                                                                A empresa
+                                                            </td>
+                                                            <td>
+                                                                Oportunidades
+                                                            </td>
+                                                            <td>
+                                                                Parceiros
+                                                            </td>
+                                                            <td>
+                                                                Fale Conosco
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <h1>CONTÉUDO DE CADA PÁGINA</h1>
+                                        </td>
                                     </tr>
                                 </table>
-                            </tr>
-                            <tr>
-                                <h1>CONTÉUDO DE CADA PÁGINA</h1>
-                            </tr>
-                        </td>
+                            </div>
+                        </td>   
                     </tr>
                 </tbody>
                 <tfoot>
