--- a/HTML/SITE/index.html
+++ b/HTML/SITE/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 </head>
 <body>
-    <h2>Olá mundo!</h2>
+    <header>
+
+    </header>
+    <main>
+        
+        <div align="center">
+            <audio controls>
+                <source src="../AUDIO/ai-chaves-ai-chavinho.mp3" type="audio/mp3">
+            </audio>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
