ADD - "exercicio02.html"

--- a/HTML/SITE/exercicio02.html
+++ b/HTML/SITE/exercicio02.html
@@ -8,142 +8,132 @@
 </head>
 <body>
     <main>
-        <div>
-            <table border="1px black" cellspacing="0">
+        <div align="center">
+            <table border="1px black" cellspacing="0" cellpadding="10px">
                 <thead>
                     <tr>
-                        <td><h1>LOGO</h1></td>
-                        <td bgcolor="orange"><h3>BANNER OU INFORMAÇÕES SITE</h3></td>
+                        <td width="30%">
+                            <h1 align="center"><font face="Arial">LOGO</font></h1>
+                        </td>
+                        <td width="70%" bgcolor="orange">
+                            <h3 align="center"><font face="Arial">BANNER OU INFORMAÇÕES SITE</font></h3>
+                        </td>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td bgcolor="darkblue">
-                            <table border="1px">
-                                <thead>
-                                    <tr>
-                                        <td>
-                                            <strong>Menu de Opções</strong>
-                                        </td>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                
-                                    <tr>
-                                        <td>
-                                            <h4>Produtos</h4>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p><a href="">Cadastrar</a></p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p><a href="">Consultar Produtos</a></p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p><a href="">Controlar Estoque</a></p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <hr size="1px" width="90%" noshade="noshade"/>
-                                        </td>  
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <h4>Clientes</h4>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p><a href="">Cadastrar</a></p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p><a href="">Exibir Clientes</a></p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <hr size="1px" width="90%" noshade="noshade"/>
-                                        </td>  
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <h4>Compras</h4>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p><a href="">Efetuar compra</a></p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p><a href="">Compras realizadas</a></p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <hr size="1px" width="90%" noshade="noshade"/>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p><a href="">Mapa do site</a></p>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </td>
-                        <td cellpadding="0">
+                        <td rowspan="2" bgcolor="darkblue">
                             <div align="center">
-                                <table border="1px" >
+                                <table border="0" color="black" cellpadding="3"> 
+                                    <div align="left">
+                                        <strong><font color="white" face="Arial">Menu de Opções</font></strong>
+                                    </div>
+                                    <tr>
+                                        <th>
+                                            <strong><font color="yellow" face="Arial">Produtos</font></strong>
+                                        </th>
+                                    </tr>
                                     <tr>
                                         <td>
-                                            <div align="center">
-                                                <table border="1px">
-                                                    <tbody>
-                                                        <tr >
-                                                            <td>
-                                                                A empresa
-                                                            </td>
-                                                            <td>
-                                                                Oportunidades
-                                                            </td>
-                                                            <td>
-                                                                Parceiros
-                                                            </td>
-                                                            <td>
-                                                                Fale Conosco
-                                                            </td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
-                                            </div>
+                                            <a href=""><font color="white" face="Arial">Cadastrar</font></a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <h1>CONTÉUDO DE CADA PÁGINA</h1>
+                                            <a href=""><font color="white" face="Arial">Consultar Produtos</font></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <a href=""><font color="white" face="Arial">Controlar Estoque</font></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <hr size="1px" size="90%" noshade="noshade" color="white"/>
+                                        </td>  
+                                    </tr>
+                                    <tr>
+                                        <th>
+                                            <strong><font color="yellow" face="Arial">Clientes</font></strong>
+                                        </th>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <a href=""><font color="white" face="Arial">Cadastrar</font></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <a href=""><font color="white" face="Arial">Exibir Clientes</font></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <hr size="1px" width="90%" noshade="noshade" color="yellow"/>
+                                        </td>  
+                                    </tr>
+                                    <tr>
+                                        <th>
+                                            <strong><font color="yellow" face="Arial">Compras</font></strong>
+                                        </th>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <a href=""><font color="white" face="Arial">Efetuar compra</font></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <a href=""><font color="white" face="Arial">Compras realizadas</font></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <hr size="1px" width="90%" noshade="noshade" color="white"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <a href=""><font color="white" face="Arial">Mapa do site</font></a>
                                         </td>
                                     </tr>
                                 </table>
                             </div>
-                        </td>   
+                        </td>
+                        <td height="10px">
+                            <div align="center">
+                                <table cellspadding="0" border="0" cellspacing="2px">
+                                    <tr>
+                                        <td>
+                                            <a href=""><font face="Arial" color="blue"><strong>&nbsp;A empresa &nbsp;</strong></font></a>
+                                        </td>
+                                        <td>
+                                            <a href=""><font face="Arial" color="blue"><strong>&nbsp;Oportunindades&nbsp;</strong></font></a>
+                                        </td>
+                                        <td>
+                                            <a href=""><font face="Arial" color="blue"><strong>&nbsp;Parceiros&nbsp;</strong></font></a>
+                                        </td>
+                                        <td>
+                                            <a href=""><font face="Arial" color="blue"><strong>&nbsp;Fale Conosco&nbsp;</strong></font></a>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <h1 align="center"><font face="Arial">CONTEÚDO DE<br>CADA PÁGINA</font></h1>
+                        </td>
+                    </tr>
+
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="2">
-                            <h3>informações sobre os desenvolvedores o/ou empresa (endereço físico, dados de contado)</h3>   
-                        </td>
+                        <th colspan="2">
+                            <h3>Informações sobre os desenvolvedores o/ou empresa (endereço físico, dados de contado)</h3>   
+                        </th>
                     </tr>
                 </tfoot>
             </table>
