--- a/HTML/SITE/planejamentoweb.html
+++ b/HTML/SITE/planejamentoweb.html
@@ -9,7 +9,7 @@
     <body>
         <div>
             <h1 align="center">Planejamento e conceitos em um projeto de site</h1>
-            <p> 
+            <p align="justify"> 
                 O site de uma empresa é como um cartão de visita que apresenta sua área de negócios e sua identidade no mercado, ou ainda, como uma vitrine virtual em que é possível, em muitos casos, expor e vender seus produtos. Mas projetar, criar e manter um site não é uma tarefa simples como seguir uma receita de bolo. Krug (2006) compara o sucesso na criação de um site com jogar golfe, em que há várias formas de fazer o certo (a bola entrar nos buracos) e um milhão de formas de não consegui-lo fazer.
             </p>
 
