--- a/HTML/SITE/exercicio02.html
+++ b/HTML/SITE/exercicio02.html
@@ -106,16 +106,16 @@
                                 <table cellspadding="0" border="0" cellspacing="2px">
                                     <tr>
                                         <td>
-                                            <a href=""><font face="Arial" color="blue"><strong>&nbsp;A empresa &nbsp;</strong></font></a>
+                                            &nbsp;<a href=""><font face="Arial" color="blue"><strong>A empresa</strong></font></a>&nbsp;
                                         </td>
                                         <td>
-                                            <a href=""><font face="Arial" color="blue"><strong>&nbsp;Oportunindades&nbsp;</strong></font></a>
+                                            &nbsp;<a href=""><font face="Arial" color="blue"><strong>Oportunindades</strong></font></a>&nbsp;
                                         </td>
                                         <td>
-                                            <a href=""><font face="Arial" color="blue"><strong>&nbsp;Parceiros&nbsp;</strong></font></a>
+                                            &nbsp;<a href=""><font face="Arial" color="blue"><strong>Parceiros</strong></font></a>&nbsp;
                                         </td>
                                         <td>
-                                            <a href=""><font face="Arial" color="blue"><strong>&nbsp;Fale Conosco&nbsp;</strong></font></a>
+                                            &nbsp;<a href=""><font face="Arial" color="blue"><strong>Fale Conosco</strong></font></a>&nbsp;
                                         </td>
                                     </tr>
                                 </table>
