--- a/HTML/TESTS/testes.html
+++ b/HTML/TESTS/testes.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -20,9 +21,9 @@
             dictum diam.</span>
         </p>
 
-        <button onclick="readMore()" id="btnReadMore">Read More</button>
+        <a onclick="readMore()" id="btnReadMore">Read More</a>
 
-        <script type="text/javascript" src="scripts.js"></script>
+        <script type="text/javascript" src="./SCRIPT/scripts.js"></script>
 
 
     </main>
