--- a/HTML/SITE/faleconosco.html
+++ b/HTML/SITE/faleconosco.html
@@ -10,7 +10,7 @@
     <div align="center">
         <h3>Trabalhando com Forms HTML 5</h3><p>
   
-            <form action="pagina2.html">
+            <form action="faleconosco.html">
                 <label for="nome">Nome:</label> 
                 <input type="text" name="nome" size="70" placeholder="Nome completo..." />
   
@@ -19,19 +19,11 @@
   
                 <p><label for="email">E-mail:</label>
                 <input type="email" name="email" size="15" placeholder="email@dominio.com" />
-  
+
                 <p>
                   <label for="numeros">Apenas Numeros: </label>
                   <input type="text" id="numeros" name="numeros"  placeholder="somente numeros...." pattern="[0-9]+$"/>
-  
-                <p>
-                  <label for="letras">Apenas Letras: </label>
-                  <input type="text" id="letras" name="letras"  placeholder="somente letras...." pattern="[a-z\s]+$"/>
-  
-                <p>
-                  <label for="date">Data: </label>
-                  <input type="date" maxlength="10" name="date" pattern="[0-9]{2}\\[0-9]{2}\\[0-9]{4}$" min="2012-01-01" max="2014-02-18" />
-  
+
                 <p>
                   <label for="phone">Telefone: </label>
                   <input type="tel" id="phone" name="phone" required placeholder="(xx) xxxxx-xxxx" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{4}"/>
