UPD - rm HTML, add ONLY_HTML

--- a/ONLY_HTML/SITE/planejamentoweb.html
+++ b/ONLY_HTML/SITE/planejamentoweb.html
@@ -14,7 +14,7 @@
             </p>
 
             <div align="center">
-                <img src="/HTML/IMAGES/imagem01.png" alt="imagem sobre mkt digital">
+                <img src="../IMAGES/imagem01.png" alt="imagem sobre mkt digital">
                 
                 <p align="justify">
                     Há na internet milhões de sites que oferecem centenas de informações semelhantes e criar mais um para oferecer o “mais do mesmo” não atrai a atenção do usuário. Por isso,<strong>em tempos de Web 2.0 é preciso inovar, ser diferente e oferecer o que o usuário quer</strong>, sem, no entanto, incomodar ou prejudicar sua experiência na internet, pois ele está a apenas um clique de mouse para abandonar um site e encontrar outro que o agrade.
@@ -90,7 +90,7 @@
             
             <div align="justify">
                     <div>
-                        <img src="/HTML/IMAGES/imagem02.png" alt="Exemplo de um wireframe">
+                        <img src="../IMAGES/imagem02.png" alt="Exemplo de um wireframe">
                         Figura 1 – Exemplo de um wireframe
                     </div>
                     <p> 
