--- a/ONLY_HTML/SITE/web03.html
+++ b/ONLY_HTML/SITE/web03.html
@@ -30,7 +30,7 @@
                 </ul>
 
                 <div align="center">
-                    <img src="/HTML/IMAGES/imagem05.png" alt="Comparativo da \web 3.0 coma s gerações anteriores">
+                    <img src="../IMAGES/imagem05.png" alt="Comparativo da \web 3.0 coma s gerações anteriores">
                     <p>Comparativo da Web 3.0 com as gerações anteriores</p>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                     Alguns exemplos de aplicações da Web 3.0 estão no <u><font color="orange">Wolfram Alfa</font></u> e na <u><font color="orange">Siri da Apple:</font></u> estes dois aplicativos conseguem resumir grandes quantidades de informações em conhecimento e ações úteis para as pessoas. Para entender melhor a diferença entre a Web 2.0 e a 3.0, podemos fazer um pequeno comparativo entre o Wolfram Alfa e o Google, usando as duas ferramentas, digitando a frase “Brasil vs Argentina” em ambos buscadores, vemos a diferença nos resultados, veja na figura abaixo:
                 </p>
                 <div align="center">
-                    <img src="/HTML/IMAGES/imagem04.png" alt="Comparativo Google e Wofram Alpha como exemplo de Web 3.0">
+                    <img src="../IMAGES/imagem04.png" alt="Comparativo Google e Wofram Alpha como exemplo de Web 3.0">
                     <p><strong>Comparativo Google e Wofram Alpha como exemplo de Web 3.0</strong></p>
                 </div>
                 <div>
