--- a/ONLY_HTML/SITE/padroesweb.html
+++ b/ONLY_HTML/SITE/padroesweb.html
@@ -9,7 +9,7 @@
     <body>
         <div align="center">
             <h1>Web Standars (padrões web) – vantagens e desvantagens</h1>
-            <img src="/HTML/IMAGES/imagem03.png" alt="Imagem amarela do site">
+            <img src="../IMAGES/imagem03.png" alt="Imagem amarela do site">
         </div>
         <div align="justify">
             <p>
