--- a/ONLY_HTML/TESTS/testes.html
+++ b/ONLY_HTML/TESTS/testes.html
@@ -13,15 +13,18 @@
     <main>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla scelerisque ligula diam, ut mattis neque
-            auctor eu. Etiam id enim quam. Nam hendrerit et orci eu ullamcorper. Duis vitae justo <span id="dots">...</span><span id="more">ut velit consectetur
-            faucibus nec quis justo. Aenean vel turpis sit amet urna ornare posuere. Praesent dapibus dui eu dui
-            eleifend fringilla a non neque. Duis feugiat rhoncus eros, a vestibulum diam luctus nec. Aenean eu tortor
-            elit. Nullam id viverra dolor, sed molestie dolor. Donec condimentum lorem ut risus sollicitudin tristique.
-            Sed ac diam non mauris pellentesque molestie in et quam. Sed eget diam iaculis, commodo ante bibendum,
-            dictum diam.</span>
+            auctor eu. Etiam id enim quam. Nam hendrerit et orci eu ullamcorper. Duis vitae justo <span
+                id="dots">...</span><span id="more">ut velit consectetur
+                faucibus nec quis justo. Aenean vel turpis sit amet urna ornare posuere. Praesent dapibus dui eu dui
+                eleifend fringilla a non neque. Duis feugiat rhoncus eros, a vestibulum diam luctus nec. Aenean eu
+                tortor
+                elit. Nullam id viverra dolor, sed molestie dolor. Donec condimentum lorem ut risus sollicitudin
+                tristique.
+                Sed ac diam non mauris pellentesque molestie in et quam. Sed eget diam iaculis, commodo ante bibendum,
+                dictum diam.</span>
         </p>
 
-        <a onclick="readMore()" id="btnReadMore">Read More</a>
+        <a onclick="readMoreII('dots', 'more', 'btnReadMore')" id="btnReadMore">Read More</a>
 
         <script type="text/javascript" src="./SCRIPT/scripts.js"></script>
 
